# Pyttern

./: .dockerignore  .gitignore  Dockerfile  README.md  codefile.java  codefile.py  new_benchmark.txt  old_benchmark.txt  pattern.jat  pattern.pyt  pyproject.toml  pytest.ini  speed.py
.github/workflows/: docker-publish.yml  python-app.yml  python-lint.yml  python-publish.yml
examples/: subpatterns.md  visualization.md  wildcards.md
hyperfine-v1.18.0-x86_64-unknown-linux-musl/: hyperfine.1
pyttern/: PytternListener.py  Pyttern_listener.py  __init__.py  main.py  misconmatcher.py  pyttern_error_listener.py
pyttern/antlr/: generate.sh
pyttern/antlr/java/: JavaLexer.g4.bak  JavaLexer.interp  JavaLexer.py  JavaLexer.tokens  JavaParser.g4  JavaParser.g4.bak  JavaParser.interp  JavaParser.py  JavaParser.tokens  JavaParserListener.py  JavaParserVisitor.py
pyttern/antlr/ludii/: LudiiLexer.g4  LudiiLexer.interp  LudiiLexer.py  LudiiParser.g4  (+6 more)
pyttern/language_processors/: __init__.py  base_processor_interface.py  java_processor.py  language_utils.py  languages.py  ludii_processor.py  python_processor.py
pyttern/macro/: Macro.py  macro_parser.py  macro_visitor.py
pyttern/pytternfsm/: generic_to_pda.py  generic_tree_pruner.py
pyttern/simulator/: Matcher.py
pyttern/subpattern/: SubPattern.py  subpattern_parser.py  subpattern_visitor.py
pyttern/visualizer/: pda_visualizer.py  pt_visualizer.py  pytterngraph_cli.py
tests/: test_completion.py  test_jattern.py  test_macros.py  test_pda_visualizer.py  test_subpattern_code_isolation.py  tests.py  tests_pda.py  verify_subpattern_code.py
tests/api/: data.json  test_application.py  test_application_batch_validate.py
tests/ludii/: test_ludii.py
tests/python/: test_macros.py  tests.py
tests/tests_files/: type.pyh
(+512 files in other folders)
